
[TestReconcile_FreshCreate - 1]
[
 {"type":"CreateClientInApi","scopes":["altinn:test/scope.read"],"keyIds":["9e5e51c1-de0e-4ad8-bb34-41018903b777.0"]},
 {"type":"UpdateSecretContent","authority":"https://test.maskinporten.no/","keyIds":["9e5e51c1-de0e-4ad8-bb34-41018903b777.0"],"expiries":["2024-01-31T00:00:00Z"]}
]
---

[TestReconcile_ApiExistsSecretLost - 1]
[
 {"type":"UpdateClientInApi","clientId":"test-client-id-123","keyIds":["4bb2b4be-0f98-494b-9840-313c764fdb31.0"]},
 {"type":"UpdateSecretContent","clientId":"test-client-id-123","authority":"https://test.maskinporten.no/","keyIds":["4bb2b4be-0f98-494b-9840-313c764fdb31.0"],"expiries":["2024-01-31T00:00:00Z"]}
]
---

[TestReconcile_ScopesChanged - 1]
[
 {"type":"UpdateClientInApi","clientId":"test-client-id-123","scopes":["altinn:new/scope.write"]}
]
---

[TestReconcile_AuthorityChanged - 1]
[
 {"type":"UpdateSecretContent","clientId":"test-client-id-123","authority":"https://test.maskinporten.no/","keyIds":["9e5e51c1-de0e-4ad8-bb34-41018903b777.0"],"expiries":["2024-01-31T00:00:00Z"]}
]
---

[TestReconcile_ScopesAndAuthorityChanged - 1]
[
 {"type":"UpdateClientInApi","clientId":"test-client-id-123","scopes":["altinn:new/scope.write"]},
 {"type":"UpdateSecretContent","clientId":"test-client-id-123","authority":"https://test.maskinporten.no/","keyIds":["9e5e51c1-de0e-4ad8-bb34-41018903b777.0"],"expiries":["2024-01-31T00:00:00Z"]}
]
---

[TestReconcile_ScopesAndJwksRotation - 1]
[
 {"type":"UpdateClientInApi","clientId":"test-client-id-123","scopes":["altinn:new/scope.write"],"keyIds":["4bb2b4be-0f98-494b-9840-313c764fdb31.1","9e5e51c1-de0e-4ad8-bb34-41018903b777.0"]},
 {"type":"UpdateSecretContent","clientId":"test-client-id-123","authority":"https://test.maskinporten.no/","keyIds":["4bb2b4be-0f98-494b-9840-313c764fdb31.1","9e5e51c1-de0e-4ad8-bb34-41018903b777.0"],"expiries":["2024-02-24T00:00:00Z","2024-01-31T00:00:00Z"]}
]
---

[TestReconcile_AuthorityAndJwksRotation - 1]
[
 {"type":"UpdateClientInApi","clientId":"test-client-id-123","keyIds":["4bb2b4be-0f98-494b-9840-313c764fdb31.1","9e5e51c1-de0e-4ad8-bb34-41018903b777.0"]},
 {"type":"UpdateSecretContent","clientId":"test-client-id-123","authority":"https://test.maskinporten.no/","keyIds":["4bb2b4be-0f98-494b-9840-313c764fdb31.1","9e5e51c1-de0e-4ad8-bb34-41018903b777.0"],"expiries":["2024-02-24T00:00:00Z","2024-01-31T00:00:00Z"]}
]
---

[TestReconcile_Deletion - 1]
[
 {"type":"DeleteSecretContent"},
 {"type":"DeleteClientInApi","clientId":"test-client-id-123"},
 {"type":"RemoveFinalizer"}
]
---

[TestReconcile_DeletionApiAlreadyGone - 1]
[
 {"type":"DeleteSecretContent"},
 {"type":"RemoveFinalizer"}
]
---

[TestReconcile_DeletionNoSecretContent - 1]
[
 {"type":"DeleteClientInApi","clientId":"test-client-id-123"},
 {"type":"RemoveFinalizer"}
]
---

[TestReconcile_DeletionNoApiNoSecretContent - 1]
[
 {"type":"RemoveFinalizer"}
]
---

[TestForcedRotation_IgnoredDuringDeletion - 1]
[
 {"type":"DeleteSecretContent"},
 {"type":"DeleteClientInApi","clientId":"test-client-id-123"},
 {"type":"RemoveFinalizer"}
]
---

[TestReconcile_NoChanges - 1]
[]
---

[TestReconcile_ApiJwksMismatchSecret - 1]
[
 {"type":"UpdateClientInApi","clientId":"test-client-id-123","keyIds":["9e5e51c1-de0e-4ad8-bb34-41018903b777.0"]}
]
---

[TestJwkRotation_NotNeededYet - 1]
[]
---

[TestJwkRotation_TriggeredAtThreshold - 1]
[
 {"type":"UpdateClientInApi","clientId":"test-client-id-123","keyIds":["4bb2b4be-0f98-494b-9840-313c764fdb31.1","9e5e51c1-de0e-4ad8-bb34-41018903b777.0"]},
 {"type":"UpdateSecretContent","clientId":"test-client-id-123","authority":"https://test.maskinporten.no/","keyIds":["4bb2b4be-0f98-494b-9840-313c764fdb31.1","9e5e51c1-de0e-4ad8-bb34-41018903b777.0"],"expiries":["2024-02-24T00:00:00Z","2024-01-31T00:00:00Z"]}
]
---

[TestJwkRotation_SecondRotation - 1]
[
 {"type":"UpdateClientInApi","clientId":"test-client-id-123","keyIds":["655bddb4-9673-4652-b27e-3ea4f3133418.2","4bb2b4be-0f98-494b-9840-313c764fdb31.1"]},
 {"type":"UpdateSecretContent","clientId":"test-client-id-123","authority":"https://test.maskinporten.no/","keyIds":["655bddb4-9673-4652-b27e-3ea4f3133418.2","4bb2b4be-0f98-494b-9840-313c764fdb31.1"],"expiries":["2024-03-20T00:00:00Z","2024-02-24T00:00:00Z"]}
]
---

[TestForcedRotation_ViaAnnotation - 1]
[
 {"type":"UpdateClientInApi","clientId":"test-client-id-123","keyIds":["4bb2b4be-0f98-494b-9840-313c764fdb31.1","9e5e51c1-de0e-4ad8-bb34-41018903b777.0"]},
 {"type":"UpdateSecretContent","clientId":"test-client-id-123","authority":"https://test.maskinporten.no/","keyIds":["4bb2b4be-0f98-494b-9840-313c764fdb31.1","9e5e51c1-de0e-4ad8-bb34-41018903b777.0"],"expiries":["2024-01-31T00:00:00Z","2024-01-31T00:00:00Z"]},
 {"type":"RemoveRotateAnnotation"}
]
---

[TestForcedRotation_AnnotationValueNotTrue - 1]
[]
---

[TestReconcile_EmptyScopes - 1]
[]
---

[TestReconcile_NilVsEmptyScopes - 1]
[]
---

[TestReconcile_AddsFinalizer - 1]
[
 {"type":"AddFinalizer"},
 {"type":"CreateClientInApi","scopes":["altinn:test/scope.read"],"keyIds":["9e5e51c1-de0e-4ad8-bb34-41018903b777.0"]},
 {"type":"UpdateSecretContent","authority":"https://test.maskinporten.no/","keyIds":["9e5e51c1-de0e-4ad8-bb34-41018903b777.0"],"expiries":["2024-01-31T00:00:00Z"]}
]
---

[TestReconcile_AllChangesAtOnce - 1]
[
 {"type":"UpdateClientInApi","clientId":"test-client-id-123","scopes":["altinn:new/scope.write"],"keyIds":["4bb2b4be-0f98-494b-9840-313c764fdb31.1","9e5e51c1-de0e-4ad8-bb34-41018903b777.0"]},
 {"type":"UpdateSecretContent","clientId":"test-client-id-123","authority":"https://test.maskinporten.no/","keyIds":["4bb2b4be-0f98-494b-9840-313c764fdb31.1","9e5e51c1-de0e-4ad8-bb34-41018903b777.0"],"expiries":["2024-02-24T00:00:00Z","2024-01-31T00:00:00Z"]}
]
---

[TestReconcile_ApiJwksEmpty - 1]
[
 {"type":"UpdateClientInApi","clientId":"test-client-id-123","keyIds":["9e5e51c1-de0e-4ad8-bb34-41018903b777.0"]}
]
---
